Everything has changed since this horrid day. People have lied, people have cried, for everyone has died, everyone has died.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="sketch.js"></script>
     <script src="snake.js"></script>
     <script src="enemy.js"></script>
+    <script src="score.js"></script>
+
   
 
 </body></html>
